objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Account_EBS_Account_ID__c</fullName>
        <formula>Account__r.EBS_Account_ID__c</formula>
        <inlineHelpText>Lookup to EBS Account ID on Account for deduping</inlineHelpText>
        <label>Account EBS Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account to which this Additional Address record is related.
This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <inlineHelpText>The Account to which this Additional Address record is related.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Additional_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Address 18 digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Address 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validation__c</fullName>
        <label>Address Validation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VALID</fullName>
                </value>
                <value>
                    <fullName>INVALID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assembled_Address__c</fullName>
        <formula>IF(text( Country__c )="Canada", 
( Address__c &amp; " "&amp; Address_2__c &amp; " "&amp; Address_3__c  &amp; BR() &amp;
 City__c &amp;", "&amp; Province__c &amp;" "&amp; Postal_Code__c &amp;" "&amp; Text(Country__c ))
, (Address__c &amp; " "&amp; Address_2__c &amp; " "&amp; Address_3__c  &amp; BR() &amp;
 City__c &amp;", "&amp;  Text(State__c)  &amp;" "&amp; Postal_Code__c &amp;" "&amp; Text(Country__c) ))</formula>
        <label>Assembled Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creation_Source_System_External_ID__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <externalId>true</externalId>
        <label>Creation Source System External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Source_System__c</fullName>
        <description>Application Identifier supplying the Creation Source System External ID
This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Creation Source System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Legal_Entity_Name__c</fullName>
        <label>Cvent Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Account_ID_Match__c</fullName>
        <description>Does the EBS Account Id on the Address match the EBS Account Id on the Account?</description>
        <formula>Account_EBS_Account_ID__c =  EBS_Account_Id__c</formula>
        <label>EBS Account ID Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EBS_Account_Id__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>EBS Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Site_Number__c</fullName>
        <description>EBS Integration field</description>
        <externalId>true</externalId>
        <label>EBS Site Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_Site_Use_ID__c</fullName>
        <description>EBS Integration field
This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <externalId>true</externalId>
        <label>EBS Site Use ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geographic_Discount_Region__c</fullName>
        <label>Geographic Discount Region</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <description>EBS integration field</description>
        <label>Integration Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_EBS_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is EBS Synced ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LA_Attention_To__c</fullName>
        <label>LA Attention To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LA_Cvent_Account_ID__c</fullName>
        <description>This field will store data from "Login Account Object" field "Cvent Account ID".</description>
        <label>LA Cvent Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LA_GUI_ID__c</fullName>
        <description>This will contains Data from "Login Account Object" field "GUI ID".</description>
        <label>LA GUI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LA_Instance__c</fullName>
        <label>LA_Instance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Can be used to name an address</description>
        <inlineHelpText>Can be used to name an address.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Account_ID__c</fullName>
        <label>Legacy_Account_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Active_ID__c</fullName>
        <label>Legacy Active ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Company_Name__c</fullName>
        <description>This field will be used as an identified to know from which instance this record is migrated.</description>
        <label>Legacy Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QuickMobile</fullName>
                </value>
                <value>
                    <fullName>Social Tables</fullName>
                </value>
                <value>
                    <fullName>DoubleDutch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Custom_Address_Id__c</fullName>
        <label>Legacy_Custom_Address_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_GenieConnect_ID__c</fullName>
        <label>Legacy GenieConnect ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Passkey_ID__c</fullName>
        <label>Legacy Passkey ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Source ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>EBS Site Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Unit_Name__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Operating Unit Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CVINC</fullName>
                </value>
                <value>
                    <fullName>CVUK</fullName>
                </value>
                <value>
                    <fullName>CVAUS</fullName>
                </value>
                <value>
                    <fullName>CVSGP</fullName>
                </value>
                <value>
                    <fullName>CVCDN</fullName>
                </value>
                <value>
                    <fullName>CVDE</fullName>
                </value>
                <value>
                    <fullName>CVUAE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Operating_Unit_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Operating Unit Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payable_Name__c</fullName>
        <description>EBS Integration Field
This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Payable Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description># 11085286</description>
        <label>Pre Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Sync?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProvinceCode__c</fullName>
        <label>Province Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <description>Used to track Canadian or other country's province data.</description>
        <inlineHelpText>This is required if Country = Canada.</inlineHelpText>
        <label>Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROL_Account__c</fullName>
        <formula>CONTAINS(Account__r.Creation_Source_System_External_ID__c, 'ROL')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROL Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remittance_Location__c</fullName>
        <description>Field to uniquely identify location for site specific remittance.</description>
        <inlineHelpText>Enter the name of the location for site specific remittance.</inlineHelpText>
        <label>Remittance Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeText__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,"Remittance"),"Billing",TEXT(Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This is being used in Cast Iron Integration, exclude from field purging exercise</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Remittance</fullName>
                    <default>true</default>
                    <label>Remittance</label>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>These are address records associated with Accounts.</description>
    <label>Address</label>
    <nameField>
        <displayFormat>ADR-{00000}</displayFormat>
        <label>Address</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>Address</fullName>
        <active>true</active>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>EBS_Integration_Only</fullName>
        <active>true</active>
        <description>This is for remittance addresses created by EBS integration for ELS data</description>
        <label>EBS Integration Only</label>
    </recordTypes>
    <validationRules>
        <fullName>Address_Type_Switch</fullName>
        <active>true</active>
        <description>Restricts Address Type switching for Billing/Remittance and Shipping.</description>
        <errorConditionFormula>OR( 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Billing', 
TEXT(Type__c) = 'Shipping'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Billing', 
TEXT(Type__c) = 'Mailing'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Billing', 
TEXT(Type__c) = 'Other'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Shipping', 
TEXT(Type__c) = 'Other'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Shipping', 
TEXT(Type__c) = 'Billing'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Shipping', 
TEXT(Type__c) = 'Remittance'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Shipping', 
TEXT(Type__c) = 'Mailing'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Remittance', 
TEXT(Type__c) = 'Other'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Remittance', 
TEXT(Type__c) = 'Shipping'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Remittance', 
TEXT(Type__c) = 'Mailing'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Other', 
TEXT(Type__c) = 'Shipping'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Other', 
TEXT(Type__c) = 'Remittance'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Other', 
TEXT(Type__c) = 'Billing'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Other', 
TEXT(Type__c) = 'Mailing'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Mailing', 
TEXT(Type__c) = 'Shipping'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Mailing', 
TEXT(Type__c) = 'Remittance'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Mailing', 
TEXT(Type__c) = 'Billing'), 
AND( 
ISCHANGED(Type__c), 
TEXT(PRIORVALUE(Type__c)) = 'Mailing', 
TEXT(Type__c) = 'Other') 
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>The Address Type can not be updated, please clone the address as the desired Address Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Operating_Unit_Change_for_Synced_Sites</fullName>
        <active>true</active>
        <description>Operating Unit cannot be changed on an Address already synced with Oracle EBS. Please create a new Address under a new Operating Unit</description>
        <errorConditionFormula>AND(

NOT(ISBLANK(EBS_Site_Use_ID__c)),

NOT($User.FirstName == 'Cast Iron'),

ISCHANGED(Operating_Unit_Name__c),

NOT(CONTAINS($User.Username,"sagarwal@cvent.com ")), /* Case #11966514*/
NOT(CONTAINS($User.Username,"a.pandey@cvent.com")),
NOT(CONTAINS($User.Username,"srathi@cvent.com"))

)</errorConditionFormula>
        <errorDisplayField>Operating_Unit_Name__c</errorDisplayField>
        <errorMessage>Operating Unit cannot be changed on an Address already synced with Oracle EBS. Please create a new Address under a new Operating Unit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Override_Operating_Unit_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Override_Operating_Unit_Name__c),
NOT(CONTAINS($User.Profile_Name__c, "Finance")),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com"))
)</errorConditionFormula>
        <errorMessage>You are not allowed to Override Operating Unit Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_cannot_be_modified</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK(EBS_Site_Use_ID__c)) , NOT(ISNEW()), 
NOT(CONTAINS($User.Profile_Name__c,"Finance")) , 
NOT(CONTAINS($User.Profile_Name__c,"System Administrator")), 
NOT($User.Validation_Bypass__c),
NOT(CONTAINS($User.Username,"sagarwal@cvent.com")),
NOT(CONTAINS($User.Username,"vagarwal@cvent.com")),
NOT(CONTAINS($User.Username,"ssahu@cvent.com")),
NOT(CONTAINS($User.Username,"aaneja@cvent.com")),
NOT(CONTAINS($User.Username,"deployment"))

)</errorConditionFormula>
        <errorMessage>You do not have the access to modify the Address. Please create a FCS Case.</errorMessage>
    </validationRules>
</CustomObject>